fix: top-aligned boxes

--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,7 @@
   display: flex;
   flex-wrap: wrap;
   overflow-y: auto;
+  align-content: flex-start;
 }
 
 .box {
